fixed button alignment

--- a/JejeHome.css
+++ b/JejeHome.css
@@ -46,6 +46,7 @@ textarea{
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px #999;
+    margin-right:5px;
   }
 
   .generatebtn:hover {
